--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>subscribe</p>
         <img src="https://static.vecteezy.com/system/resources/previews/002/359/770/non_2x/bell-icon-free-vector.jpg" alt="">
     </button> -->
-
-
+    
+    <p>comment</p>
 </body>
 </html>
